I'm still building this website so, i have to let people know (but hire me!)

--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     <body>
         <div id="landing">
             <div style='height: 20%'>
-                <h4 class="pgTex" id="introu"style="text-align: left">Hi, I'm</h4>
+                <!--<h4 class="pgTex" id="introu"style="text-align: left">Hi, I'm</h4> -->
             </div>
             <div class=cenTex>
-                    <h1 class="colotwang">Terrence Amponsah</h1>
-                    <div class="icobox">
+                    <h1 class="colotwang">This Website is under construction </h1>
+                    <!--<div class="icobox">
                         <a href="#"><i class="icob pxp fas fa-arrow-down colotwang"></i></a>
                     </div>
-                    <p class="pgTex">I am a student at the University of Toronto</p>
+                    <p class="pgTex">I am a student at the University of Toronto</p>-->
             </div>
             
         </div>
+        <!--
         <div id="languages">
             <h2>Skills</h2>
             <ul>
@@ -34,7 +35,7 @@
         <div id="projects">
 
         </div>
-
+    -->
     </body>
 
 </html>
