--- a/trail.html
+++ b/trail.html
@@ -1,35 +1,40 @@
-<head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="scroll-down.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="./trail.css">
-    <script type="text/javascript" src="./trail.js"></script>
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" type="text/css" href="index.css"/>
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    </head>
 
-</head>
-<body>
-    <section class="company-heading intro-type" id="parallax-one">
-        <div class="container">
-        <div class="row product-title-info" style="height: 100%">
-            <div class="col-md-12">
-            <h3>Hi, I'm</h3>
-            <h1>Terrence Amponsah</h1>
-            <a class="ct-btn-scroll ct-js-btn-scroll" href="#section2"><img alt="Arrow Down Icon" src="https://www.solodev.com/assets/anchor/arrow-down.png"></a>
+    <body>
+        <div id="landing">
+            <div style='height: 20%'>
+                <h4 class="pgTex" id="introu"style="text-align: left">Hi, I'm</h4>
             </div>
-        </div>
-        </div>
-        <div class="parallax" id="parallax-cta" style="background-image:url(https://www.solodev.com/assets/anchor/company-hero2.jpg);"></div>
-    </section>
-    <div class="main">
-        <section id="section2">
-        <div class="container jumbo">
-            <div class="jumbotron">
-            <h2>Let Big Data Change the Game</h2>
-            <p>WebCorpCo is all about making sure your marketing stack is in alignment with your company as well as the customers you serve. There is no 'one size fits all' approach to marketing. Every business is unique, customers are unique, and your marketing should be as well.</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+            <div class=cenTex>
+                    <h1 class="colotwang">Terrence Amponsah</h1>
+                    <div class="icobox">
+                        <a href="#"><i class="icob pxp fas fa-arrow-down colotwang"></i></a>
+                    </div>
+                    <p class="pgTex">I am a student at the University of Toronto</p>
             </div>
+            
         </div>
-        </section>
-    </div>
-</body>
+        <div id="languages">
+            <h2>Skills</h2>
+            <ul>
+                <li class="greLis">Python</li>
+                <li class="greLis">HTML</li>
+                <li class="greLis">CSS</li>
+                <li class="greLis">Javascript</li>
+                <li class="greLis">Django</li>
+                <li class="greLis">Node.js</li>
+                <li class="greLis">Express.js</li>
+            </ul>
+        </div>
+        <div id="projects">
+
+        </div>
+
+    </body>
+
+</html>
