--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             </div>
             <div class=cenTex>
                     <h1 class="colotwang">This Website is under construction </h1>
+                    <p> Feel free to look at the disgusting teal background that I can't seem to change :)</p>
                     <!--<div class="icobox">
                         <a href="#"><i class="icob pxp fas fa-arrow-down colotwang"></i></a>
                     </div>
