Changed color scheme, added scroll transition (trail html)

--- a/trail.html
+++ b/trail.html
@@ -31,9 +31,18 @@
             </ul>
         </div>
         <div id="projects">
-
+            <h2>Portfolio</h2>
+            <ul>
+                <li class="greLis"><a href="rootsyard.org" style="text-decoration: none; font-family: inherit; color:inherit" >RootsYard Lodge</a></li>
+            </ul>
         </div>
 
+
+
+
+
+        <script src='https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js'></script>
+   <script src='./trail.js'></script>
     </body>
 
 </html>
